[package]
name = "rotating-file"
version = "0.3.6"
authors = ["soulmachine <soulmachine@gmail.com>"]
edition = "2021"
description   = "A thread-safe rotating file with customizable rotation behavior."
license = "Apache-2.0"
repository = "https://github.com/soulmachine/rotating-file"
keywords = ["logging", "logrotate", "rotating"]

[dependencies]
chrono = "0.4.19"
flate2 = "1.0.23"
log = "0.4.16"
zip = "0.6.2"

[dev-dependencies]
once_cell = "1.10.0"
